# server/controllers/users.controllers.js
@@ -11,7 +11,7 @@ const writeFile = promisify(fs.writeFile);
 const getUsers = async (req, res) => {
     try {
         const response = await pool.query('SELECT * FROM users')
-        res.json(response.rows)
+        res.status(200).json(response.rows)
     } catch (error) {
         res.status(500).json({
             message: { error }
@@ -21,7 +21,7 @@ const getUsers = async (req, res) => {
 
 
 const createUser = async (req, res) => {
-    const { name, email, mobileNumber, height, weight, password, favactivities, timeline,following } = req.body
+    const { name, email, mobileNumber, height, weight, password, favactivities, timeline, following } = req.body
     const salt = await bcrypt.genSalt(10)
     const hashedPassword = await bcrypt.hash(password, salt)
     const response = await pool.query(
@@ -47,11 +47,11 @@ const createUser = async (req, res) => {
             message: 'Mobile Number already exists'
         })
     }
-    
+
     try {
         await pool.query(
             'INSERT INTO users (name, email, mobileNumber, height, weight, password,favactivities,timeline,following) VALUES ($1, $2, $3,$4, $5, $6,$7,$8,$9)',
-            [name, email, mobileNumber, height, weight, hashedPassword, favactivities, timeline,following]
+            [name, email, mobileNumber, height, weight, hashedPassword, favactivities, timeline, following]
         )
         res.status(200).json({
             message: 'Signed Up Succesfully',
@@ -251,7 +251,7 @@ const getUserById = async (req, res) => {
     const user_id = req.params.id;
     try {
         const response = await pool.query(
-            'SELECT u.name,u.email,u.user_id,u.mobilenumber,u.height,u.weight FROM users u WHERE user_id = $1',
+            'SELECT u.user_id,u.name,u.email,u.user_id,u.mobilenumber,u.height,u.weight FROM users u WHERE user_id = $1',
             [user_id]
         );
         const user = response.rows[0];
@@ -278,6 +278,12 @@ const getUserAdhar = async (req, res) => {
             [user_id]
         );
         const aadhar = response.rows[0];
+        if (!aadhar) {
+            console.log("hi ");
+            return res.status(404).json({
+                message: 'Aadhar not found'
+            });
+        }
         res.json(aadhar);
     } catch (error) {
         console.log(error);
@@ -308,11 +314,13 @@ const uploadAadhar = async (req, res) => {
             'UPDATE users SET aadhar = $1 WHERE user_id = $2',
             [name, user_id]
         );
+        const aadhar = await pool.query(
+            'SELECT aadhar FROM users WHERE user_id = $1',
+            [user_id]
+        );
         res.json({
             message: 'Aadhar uploaded successfully',
-            body: {
-                user: { user }
-            }
+            aadhar: aadhar.rows[0].aadhar
         });
     } catch (error) {
         console.log(error);
@@ -344,7 +352,7 @@ const getUserTimeline = async (req, res) => {
             WHERE p.performance_id IN (SELECT unnest(timeline) FROM users WHERE user_id = $1)`,
             [user_id]
         );
-        res.json(timelineDetails.rows);
+        res.status(200).json(timelineDetails.rows);
     } catch (error) {
         console.log(error);
         res.status(500).json({
